--- a/src/shared/i18n/messages/ja.json
+++ b/src/shared/i18n/messages/ja.json
@@ -61,7 +61,7 @@
 		},
 		"validation": {
 			"nameRequired": "組織名を入力してください",
-			"nameInvalidChars": "組織名は英字、数字、スペース、アンダースコア、ハイフンのみ使用できます",
+			"nameInvalidChars": "組織名は英字、数字、半角スペース、アンダースコア、ハイフンのみ使用できます",
 			"slug": {
 				"required": "組織のスラッグを入力してください",
 				"invalidChars": "組織のスラッグは小文字の英字、数字、ハイフンのみ使用できます",
