--- a/src/shared/i18n/messages/ja.json
+++ b/src/shared/i18n/messages/ja.json
@@ -64,8 +64,8 @@
 			"nameInvalidChars": "組織名は英字、数字、半角スペース、アンダースコア、ハイフンのみ使用できます",
 			"slug": {
 				"required": "組織のスラッグを入力してください",
-				"invalidChars": "組織のスラッグは小文字の英字、数字、ハイフンのみ使用できます",
-				"invalidFormat": "組織のスラッグは小文字で、英数字で始まり、英数字またはハイフンを含み、英数字で終わる必要があります"
+				"invalidChars": "組織のスラッグは半角小文字の英字、数字、ハイフンのみ使用できます",
+				"invalidFormat": "組織のスラッグは半角英数字で始まり、半角英数字で終わる必要があります。最初と最後にハイフンを含めることはできません"
 			}
 		}
 	},
