--- a/src/shared/i18n/messages/en.json
+++ b/src/shared/i18n/messages/en.json
@@ -54,6 +54,11 @@
 	"Organization": {
 		"name": "Organization Name",
 		"slug": "Organization URL",
+		"createdAt": "Created At",
+		"noOrganizations": "No organizations found",
+		"error": {
+			"failedToLoadOrganizations": "Failed to load organizations"
+		},
 		"create": {
 			"organization": "Create Organization",
 			"organizationDescription": "Create a new organization to manage your projects and teams.",
