--- a/src/shared/i18n/messages/en.json
+++ b/src/shared/i18n/messages/en.json
@@ -56,6 +56,7 @@
 		"slug": "Organization URL",
 		"createdAt": "Created At",
 		"noOrganizations": "No organizations found",
+		"findOrganization": "Find Organization",
 		"error": {
 			"failedToLoadOrganizations": "Failed to load organizations"
 		},
