--- a/src/shared/i18n/messages/ja.json
+++ b/src/shared/i18n/messages/ja.json
@@ -56,6 +56,7 @@
 		"slug": "組織のURL",
 		"createdAt": "作成日",
 		"noOrganizations": "組織に所属していません",
+		"findOrganization": "組織を検索",
 		"error": {
 			"failedToLoadOrganizations": "組織の読み込みに失敗しました"
 		},
