--- a/src/shared/i18n/messages/ja.json
+++ b/src/shared/i18n/messages/ja.json
@@ -19,9 +19,9 @@
 		"logOut": "ログアウト",
 		"dontHaveAccount": "アカウントをお持ちでない方",
 		"alreadyHaveAccount": "すでにアカウントをお持ちの方",
-		"logInWithGithub": "GitHubで続ける",
+		"logInWithGithub": "GitHubでログイン",
 		"username": "ユーザー名",
-		"usernameCanBeChanged": "あとから変更できます",
+		"usernameCanBeChanged": "あとで変更できます",
 		"validation": {
 			"emailRequired": "メールアドレスを入力してください",
 			"emailInvalid": "有効なメールアドレスを入力してください",
@@ -32,9 +32,9 @@
 			"usernameRequired": "ユーザー名を入力してください",
 			"usernameMinLength": "ユーザー名を入力してください",
 			"usernameMaxLength": "ユーザー名は50文字以下で入力してください",
-			"usernameInvalidChars": "ユーザー名は英字、数字、アンダースコアのみ使用できます",
+			"usernameInvalidChars": "ユーザー名は半角英数字とアンダースコアのみ使用できます",
 			"usernameReserved": "このユーザー名は使用できません",
-			"usernameAlreadyExists": "このユーザー名は既に存在します"
+			"usernameAlreadyExists": "このユーザー名は既に使用されています"
 		}
 	},
 	"UserInfo": {
@@ -42,59 +42,60 @@
 		"password": "パスワード",
 		"username": "ユーザー名",
 		"accountPreferences": "アカウント設定",
-		"accountPreferencesDescription": "アカウント設定と環境設定を管理します。",
-		"dangerZone": "危険ゾーン",
-		"dangerZoneDescription": "破壊的なアクションです。",
-		"deleteAccount": "アカウントを削除",
-		"deleteAccountDescription": "このアクションは元に戻すことができません。これにより、アカウントと関連データが完全に削除されます。",
-		"deleteAccountConfirmation": "本当に削除しますか？",
-		"deleteAccountConfirmationDescription": "このアクションは元に戻すことができません。これにより、アカウントと関連データが完全に削除されます。",
+		"accountPreferencesDescription": "アカウントの設定と環境設定を管理します。",
+		"dangerZone": "危険な操作",
+		"dangerZoneDescription": "取り消しできない破壊的な操作です。",
+		"deleteAccount": "アカウントの削除",
+		"deleteAccountDescription": "アカウントと関連するすべてのデータを完全に削除します。",
+		"deleteAccountConfirmation": "本当によろしいですか？",
+		"deleteAccountConfirmationDescription": "この操作は取り消すことができません。アカウントとデータがサーバーから完全に削除されます。",
 		"deleteAccountConfirm": "アカウントを削除"
 	},
 	"Organization": {
 		"name": "組織名",
 		"slug": "組織のURL",
-		"createdAt": "作成日",
-		"noOrganizations": "組織に所属していません",
-		"findOrganization": "組織を検索",
+		"createdAt": "作成日時",
+		"noOrganizations": "組織が見つかりません",
+		"findOrganization": "組織を検索...",
 		"error": {
 			"failedToLoadOrganizations": "組織の読み込みに失敗しました"
 		},
 		"create": {
 			"organization": "組織を作成",
-			"organizationDescription": "新しい組織を作成して、プロジェクトとチームを管理します。",
+			"organizationDescription": "プロジェクトとチームを管理する新しい組織を作成します。",
 			"organizationConfirm": "組織を作成"
 		},
 		"validation": {
 			"nameRequired": "組織名を入力してください",
-			"nameInvalidChars": "組織名は英字、数字、半角スペース、アンダースコア、ハイフンのみ使用できます",
+			"nameInvalidChars": "組織名は半角英数字、半角スペース、アンダースコア、ハイフンのみ使用できます",
 			"slug": {
-				"required": "組織のスラッグを入力してください",
-				"invalidChars": "組織のスラッグは半角英字、数字、ハイフンのみ使用できます",
-				"invalidFormat": "組織のスラッグは半角英数字で始まり、半角英数字で終わる必要があります。最初と最後にハイフンを含めることはできません",
-				"alreadyExists": "このスラッグは既に使用されています"
+				"required": "組織のURLを入力してください",
+				"invalidChars": "組織のURLは半角英数字とハイフンのみ使用できます",
+				"invalidFormat": "組織のURLは英数字で始まり、英数字で終わる必要があります。また、先頭と末尾にハイフンは使用できません",
+				"alreadyExists": "このURLは既に使用されています"
 			}
-		}
+		},
+		"noSearchResults": "検索結果が見つかりません"
 	},
 	"Action": {
 		"cancel": "キャンセル",
 		"delete": "削除",
 		"deleting": "削除中..."
 	},
-	"commingSoon": "近日公開...",
-	"connectToRepository": "リポジトリを接続",
+	"commingSoon": "準備中...",
+	"connectToRepository": "リポジトリに接続",
 	"Error": {
-		"title": "おっと、何かが間違っていたようです :(",
+		"title": "エラーが発生しました :(",
 		"queryError": "データの取得中に問題が発生しました: {message}",
 		"mutationError": "リクエストの処理中に問題が発生しました: {message}",
-		"clientError": "入力内容をご確認の上、再度お試しください: {message}",
-		"serverError": "システムに問題が発生しています。しばらく時間をおいて再度お試しください: {message}",
-		"unknownError": "予期せぬエラーが発生しました。しばらく時間をおいて再度お試しください。"
+		"clientError": "入力を確認して再度お試しください: {message}",
+		"serverError": "技術的な問題が発生しています。後でもう一度お試しください: {message}",
+		"unknownError": "予期せぬエラーが発生しました。後でもう一度お試しください。"
 	},
-	"refresh": "トップページに戻る",
+	"refresh": "更新",
 	"notFound": {
 		"title": "ページが見つかりません",
-		"description": "お探しのページは存在しないか、移動されました。ご心配なく、最高の探検家でも迷子になることはあります。",
+		"description": "お探しのページは存在しないか、移動した可能性があります。ご心配なく、優れた探検家でも時には道に迷うことがあります。",
 		"goToHome": "ホームに戻る"
 	}
 }
