feat: Show projects in organization on header

--- a/src/shared/i18n/messages/en.json
+++ b/src/shared/i18n/messages/en.json
@@ -77,6 +77,10 @@
 		},
 		"noSearchResults": "No search results found"
 	},
+	"Project": {
+		"noProjects": "No projects found",
+		"findProject": "Find project..."
+	},
 	"Action": {
 		"cancel": "Cancel",
 		"delete": "Delete",
