feat: Add project.name validation and messages

--- a/src/shared/i18n/messages/en.json
+++ b/src/shared/i18n/messages/en.json
@@ -79,7 +79,15 @@
 	},
 	"Project": {
 		"noProjects": "No projects found",
-		"findProject": "Find project..."
+		"findProject": "Find project...",
+		"validation": {
+			"name": {
+				"required": "Project name is required",
+				"maxLength": "Project name must be less than 100 characters",
+				"format": "Project name must be lowercase and can only contain letters, numbers, and the following characters: '.', '_', '-'",
+				"noSpaces": "Spaces are not allowed in project name"
+			}
+		}
 	},
 	"Action": {
 		"cancel": "Cancel",
