--- a/src/shared/i18n/messages/ja.json
+++ b/src/shared/i18n/messages/ja.json
@@ -79,7 +79,15 @@
 	},
 	"Project": {
 		"noProjects": "プロジェクトが見つかりません",
-		"findProject": "プロジェクトを検索..."
+		"findProject": "プロジェクトを検索...",
+		"validation": {
+			"name": {
+				"required": "プロジェクト名を入力してください",
+				"maxLength": "プロジェクト名は100文字以下で入力してください",
+				"format": "プロジェクト名は小文字のアルファベット、数字、および次の記号のみ使用できます: '.', '_', '-'",
+				"noSpaces": "プロジェクト名にスペースは使用できません"
+			}
+		}
 	},
 	"Action": {
 		"cancel": "キャンセル",
