feat: Enhance organization member list with profile username and email

--- a/src/shared/i18n/messages/en.json
+++ b/src/shared/i18n/messages/en.json
@@ -106,6 +106,13 @@
 			}
 		}
 	},
+	"Member": {
+		"username": "Username",
+		"email": "Email",
+		"role": "Role",
+		"joinedAt": "Joined At",
+		"lastActiveAt": "Last Active At"
+	},
 	"Action": {
 		"cancel": "Cancel",
 		"delete": "Delete",
