feat: Add actions dropdown to organization member list

--- a/src/shared/i18n/messages/en.json
+++ b/src/shared/i18n/messages/en.json
@@ -85,7 +85,10 @@
 			"userId": "User ID",
 			"role": "Role",
 			"joinedAt": "Joined At",
-			"lastActiveAt": "Last Active At"
+			"lastActiveAt": "Last Active At",
+			"actions": "Actions",
+			"manageAccess": "Manage Access",
+			"removeFromOrganization": "Remove from Organization"
 		},
 		"noMembers": "No members found"
 	},
