feat(docs): Add separator in docs sidebar

--- a/apps/docs/src/content/index.mdx
+++ b/apps/docs/src/content/index.mdx
@@ -2,7 +2,7 @@ import { Bleed } from 'nextra/components'
 
 # Introduction
 
-**Nextra** is a [Next.js](https://nextjs.org) based static site generator.
+**Nito** は開発チームの生産性を最大化するためのツールです。
 
 It supports Markdown and React components ([MDX](/features/mdx)), automatically
 generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links),
