feat: Implement ProjectNameField component

--- a/apps/web/src/shared/i18n/messages/en.json
+++ b/apps/web/src/shared/i18n/messages/en.json
@@ -104,6 +104,7 @@
 		"noMembers": "No members found"
 	},
 	"Project": {
+		"name": "Project Name",
 		"noProjects": "No projects found",
 		"findProject": "Find project...",
 		"create": {
