feat: Add project members link to header links

--- a/apps/web/src/shared/i18n/messages/en.json
+++ b/apps/web/src/shared/i18n/messages/en.json
@@ -105,6 +105,11 @@
 	},
 	"Project": {
 		"name": "Project Name",
+		"members": "Project Members",
+		"membersDescription": "Manage your project members",
+		"error": {
+			"projectNotFound": "Project not found"
+		},
 		"noProjects": "No projects found",
 		"findProject": "Find project...",
 		"create": {
